# mathforge

./: .gitignore  LICENSE  README.md  pyproject.toml
mathforge/arithmetic/: DESIGN.md  README.md  ROADMAP.md
mathforge/arithmetic/algorithms/: gcd.py  lcm.py  primes.py
mathforge/arithmetic/numbers/: complex_numbers.py  decimal.py  fraction.py  percentage.py
mathforge/arithmetic/tests/: test_complex_number.py  test_decimal.py  test_fraction.py  test_gcd.py  test_lcm.py  test_percentage.py  test_primes.py
mathforge/core/: constants.py  errors.py
